--- a/careers.html
+++ b/careers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +10,15 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Careers</title>
 </head>
+
 <body>
     <div id="navbar"></div>
 
     <div class="careers">
         <h1>Build the Future of Artificial Intelligence</h1>
 
-        <form id="applicationForm" enctype="multipart/form-data" class="careers-form">
+        <form id="applicationForm" enctype="multipart/form-data" class="careers-form" action="/submitForm"
+            method="post">
             <div class="mb-3">
                 <label for="name" class="form-label">Name:</label>
                 <input type="text" class="form-control" id="name" name="name" required>
@@ -23,6 +26,10 @@
             <div class="mb-3">
                 <label for="exceptionalWork" class="form-label">Exceptional Work (Software, Hardware, AI):</label>
                 <textarea class="form-control" id="exceptionalWork" name="exceptionalWork" rows="3"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email Id:</label>
+                <input type="email" class="form-control" id="email" name="email" required>
             </div>
             <div class="mb-3">
                 <label for="contactNo" class="form-label">Contact No.:</label>
@@ -34,9 +41,14 @@
             </div>
             <div class="mb-3">
                 <label for="roleCategory" class="form-label">Role Category:</label>
-                <select class="form-select" id="roleCategory" name="roleCategory" required>
-                    <option value="">Select Role Category</option>
-                </select>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton">
+                        Select Role Category
+                    </button>
+                    <ul class="dropdown-menu" id="roleCategoryDropdown">
+                        <!-- Checkboxes will be added here dynamically -->
+                    </ul>
+                </div>
             </div>
             <div class="mb-3">
                 <label for="yearOfPassing" class="form-label">Year of Passing:</label>
@@ -50,10 +62,49 @@
         </form>
     </div>
 
+    <script>
+        document.getElementById('applicationForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Prevent default form submission
+
+            var form = event.target;
+            var formData = new FormData(form);
+
+            fetch('/submitForm', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => {
+                    if (response.ok) {
+                        // Show success message
+                        alert('Form submitted successfully! Our team will connect with you shortly.');
+                        // Redirect to the same page
+                        window.location.href = window.location.href;
+                    } else {
+                        // Handle other status codes, such as 400 (Bad Request)
+                        return response.json(); // Parse response body as JSON
+                    }
+                })
+                .then(data => {
+                    // If the response contains an error message, show it in an alert box
+                    if (data && data.error) {
+                        alert(data.error);
+                    }
+                })
+                .catch(error => {
+                    // Show error message
+                    alert('Error submitting form. Please try again later.');
+                });
+        });
+    </script>
+
+    <a href="/admin_login.html">Admin Login</a>
+
+
     <div id="footer"></div>
 
     <div id="copyright"></div>
 
     <script src="js/index.js"></script>
 </body>
+
 </html>
